# CyberShell

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pypi.yaml
