[project]
name = "cybershell"
dynamic = ["version"]
description = "The Shell That Shapes Your Code"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Hyperoot", email = "rajesh@hyperoot.dev" }]
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.scripts]
cybershell = "cybershell.__main__:main"
