[project]
name = "cybershell"
version = "0.1.3"
description = "The Shell That Shapes Your Code"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Hyperoot", email = "rajesh@hyperoot.dev" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Code Generators",
]
dependencies = ["pre-commit>=4.1.0"]

[project.urls]
Repository = "https://github.com/HYP3R00T/CyberShell.git"
Issues = "https://github.com/HYP3R00T/CyberShell/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.7"]

[project.scripts]
cybershell = "cybershell.__main__:main"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long
    "C901", # too complex
]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
